--- a/app/src/main/res/layout/activity_asignar_actividad.xml
+++ b/app/src/main/res/layout/activity_asignar_actividad.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/yellow">
 
     <LinearLayout
-        android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@color/yellow"
         android:padding="20dp">
 
-        <!-- Título -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -20,15 +17,16 @@
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@color/black"
-            android:layout_marginBottom="20dp"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="20dp" />
 
-        <!-- Lista de actividades -->
         <RadioGroup
             android:id="@+id/grupoActividades"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="#E0E0E0"
+            android:padding="10dp">
 
             <RadioButton
                 android:id="@+id/rbActividad1"
@@ -73,53 +71,34 @@
                 android:textColor="@color/black"/>
         </RadioGroup>
 
-        <!-- Campo de DNI -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="DNI socio/no socio:"
             android:textSize="16sp"
             android:textColor="@color/black"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginTop="20dp" />
 
         <EditText
             android:id="@+id/etDni"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:hint="Ej: 12345678"
-            android:background="@drawable/edittext_fondo"
             android:textColor="@color/black"
             android:textColorHint="@color/black"
             android:layout_marginTop="8dp"
             android:padding="10dp"
-            android:inputType="number"/>
+            android:inputType="number" />
 
-        <!-- Botones -->
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/btnAsignar"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_marginTop="30dp">
-
-            <Button
-                android:id="@+id/btnAsignar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Asignar actividad"
-                android:backgroundTint="@color/black"
-                android:textColor="@color/white"
-                android:layout_marginEnd="20dp"/>
-
-            <Button
-                android:id="@+id/btnPagar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Pagar actividad"
-                android:backgroundTint="@color/black"
-                android:textColor="@color/white"/>
-        </LinearLayout>
+            android:text="Asignar actividad"
+            android:backgroundTint="@color/black"
+            android:textColor="@color/white"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"/>
 
     </LinearLayout>
 </ScrollView>
